Upload fixed project
